Fix rendering bug: low resolution images don't stretch anymore

--- a/gulp/application/sources/scss/typography.scss
+++ b/gulp/application/sources/scss/typography.scss
@@ -112,15 +112,19 @@ img {
 }
 
 .picture-wrapper {
-  width: 100%;
-  height: 0;
-  position: relative;
   background: $gray-300;
 
-  img {
-    width: 100%;
-    position: absolute;
-  }
+  .picture-wrapper-outer {
+		position: relative;
+	}
+
+  .picture-wrapper-inner {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+	}
 }
 
 figure {
